--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemo": "^1.0.0"
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "commander": "^11.1.0",
+    "fs.promises": "^0.1.2",
+    "nanoid": "^5.0.2",
+    "path": "^0.12.7",
+    "uuid": "^9.0.1",
+    "yar": "^9.1.0"
   }
 }
